compiler/tests/invalid_programs/syntax/nonsense_class.jm
#!SyntaxError

class Foo
  !*=foo bar
end
